# soul-legacy

./: .gitignore  Dockerfile  LICENSE  MONICA.md  Procfile  README.md  ROADMAP.md  nixpacks.toml  pyproject.toml  railway.json  requirements.txt
.github/workflows/: publish.yml
contracts/: VaultAnchor.sol
docs/: CNAME  index.html
soul_legacy/: __init__.py  blockchain.py  chat.py  cli.py  crypto.py  deadmans.py  embeddings.py  ingest.py  models.py  soul_integration.py  vectorstore.py
soul_legacy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
soul_legacy/server/: app.py  auth.py
soul_legacy/server/api/: deadmans.py  memorize.py
soul_legacy/server/static/: index.html
