[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soul-legacy"
version = "0.1.1"
description = "Digital estate vault — local-first, encrypted, LLM-queryable"
readme = "README.md"
license = { text = "BSL-1.1" }
authors = [{ name = "Prahlad Menon", email = "menon.prahlad@gmail.com" }]
keywords = ["estate", "vault", "encryption", "legacy", "soul"]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "PyJWT>=2.8",
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "cryptography>=41.0",
    "requests>=2.28",
    "soul-agent>=0.1.5",
    "gitpython>=3.1",
    "python-dotenv>=1.0",
    "pdfplumber>=0.10",
]

[project.optional-dependencies]
# Local OCR — needs system tesseract installed
ocr-local   = ["pytesseract", "pillow", "pdf2image"]
# Local embeddings — ONNX, no PyTorch, no GPU
embed-local = ["fastembed"]
# Word docs
docx        = ["python-docx"]
# Blockchain anchoring
blockchain  = ["web3>=6.0"]
# Everything
all = [
    "pytesseract", "pillow", "pdf2image",
    "fastembed",
    "python-docx",
]
dev = ["pytest", "black", "mypy"]

[project.scripts]
soul-legacy = "soul_legacy.cli:main"

[project.urls]
Homepage   = "https://github.com/menonpg/soul-legacy"
Repository = "https://github.com/menonpg/soul-legacy"

[tool.setuptools.packages.find]
where    = ["."]
include  = ["soul_legacy*"]
